# ansible_restic

./: .ansible-lint  .gitignore  .gitlab-ci.yml  .yamllint  CHANGELOG.md  README.md  pyproject.toml  renovate.json
defaults/: main.yml
defaults/main/: 00-base.yml  01-pkgs.yml
meta/: main.yml
tasks/: backup.yml  backup_schedule.yml  desktop_dependencies.yml  hook.yml  hooks.yml  hooks_handler.yml  hooks_patcher.yml  logrotate.yml  main.yml  prune.yml  prune_external.yml  prune_schedule.yml
templates/srv/restic/: cri_alerting.sh.j2  cri_restic.sh.j2  cri_restic_wrapper.sh.j2  hooks_vars.j2  restic_wrapper.sh.j2  retry_handler.sh.j2  utils.sh.j2  utils_alerting.sh.j2
vars/: Ubuntu.yml  defaults.yml
