[project]
name = "restic-ansible"
version = "0.0.1"
authors = [
  { name="Sevan Murriguian-Watrin", email="sevan@cri.epita.fr" },
]
license = "GPL-3"
license-files = ["LICEN[CS]E*"]
description = "Simple pyproject file to handle ansible versions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=12.0.0",
    "ansible-core>=2.19.2",
    "ansible-lint>=25.9.0",
    "yamllint>=1.37.1",
]

[tool.uv]
